--- a/PA1_template.html
+++ b/PA1_template.html
@@ -131,7 +131,7 @@ plot(avg_daily_pattern$interval, avg_daily_pattern$steps, type = &quot;l&quot;, 
 <li>Create a new dataset that is equal to the original dataset but with the missing data filled in.</li>
 </ul>
 <pre class="r"><code>activity_data_imputed &lt;- activity_data
-activity_data_imputed$steps &lt;- as.integer(with(activity_data, round(impute(steps, mean))))
+activity_data_imputed$steps &lt;- as.integer(with(activity_data_imputed, round(impute(steps, mean))))
 steps_per_day_imputed &lt;- aggregate(steps ~ date, activity_data_imputed, sum)</code></pre>
 <ul>
 <li>Make a histogram of the total number of steps taken each day and Calculate and report the mean and median total number of steps taken per day. Do these values differ from the estimates from the first part of the assignment? What is the impact of imputing missing data on the estimates of the total daily number of steps?</li>
